# rew

./: .gitignore  .rewscope  ANALYSIS_CODE_REFERENCES.txt  ANALYSIS_DATA_FLOW.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_HOOK_INSTALL.md  CLAUDE_CODE_HOOK_INTEGRATION.md  CLAUDE_CODE_INTEGRATION_GUIDE.md  COMPETITOR_HOOK_RESEARCH.md  Cargo.toml  DEVELOPER_BUILD_GUIDE.md  DOCS_INDEX.md  DOCS_QUICK_NAV.md  DOCUMENTATION_MAP.md  FILTERING_AUDIT_FIXES.md  GETTING_STARTED_WITH_HOOKS.md  HOOK_ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  INSTALL_CLAUDE_CODE_HOOKS.md  PATCH_RECOMMENDATION.md  QUICK_REFERENCE.md  README.md  REW_ARCHITECTURE.md  USER_INSTALLATION_GUIDE.md  claude-progress.txt  index.html  package.json  pnpm-lock.yaml  test_rew_hook.rs  tsconfig.json
.github/workflows/: pages.yml  release.yml
crates/rew-cli/: Cargo.toml
crates/rew-cli/src/: display.rs  main.rs
crates/rew-cli/src/commands/: config.rs  daemon.rs  diff.rs  hook.rs  init.rs  install.rs  list.rs  mod.rs  pin.rs  restore.rs  show.rs  status.rs  undo.rs
crates/rew-core/: Cargo.toml
crates/rew-core/src/: baseline.rs  config.rs  db.rs  diff.rs  error.rs  file_index.rs  hook_events.rs  hooks.rs  launchd.rs  lib.rs  lifecycle.rs  logging.rs  objects.rs  pipeline.rs  pre_tool_store.rs  processor.rs  reconcile.rs  restore.rs  scanner.rs  scope.rs  storage.rs  traits.rs  types.rs
crates/rew-core/src/backup/: clonefile.rs  copy_strategy.rs  engine.rs  mod.rs
crates/rew-core/src/detector/: dedup.rs  mod.rs  rules.rs
crates/rew-core/src/notifier/: macos.rs  mod.rs
crates/rew-core/src/snapshot/: macos.rs  mod.rs  tmutil.rs
crates/rew-core/src/watcher/: filter.rs  macos.rs  mod.rs
crates/rew-core/tests/: backup_restore.rs  change_tracking.rs  full_journey.rs  git_semantics.rs  performance.rs  system_integration.rs
docs/: 01-行业调研方案.md  02-产品需求方案.md  03-技术方案.md  DISTRIBUTION.md  KM文章草稿.md  KM文章草稿v2.md  KM文章草稿v3.md  KM文章草稿v4.md  KM文章草稿v5.md  PRODUCT_PLAN_V2.md  TESTING.md  system-flow.md
gui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
gui/src/: App.tsx  index.css
gui/src/components/: BatchProgressBanner.tsx  DiffViewer.tsx  InsightsPanel.tsx  MainLayout.tsx  RestoreHistoryModal.tsx  RollbackPanel.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.tsx  TaskDetail.tsx  TaskTimeline.tsx  ToolIcons.tsx  UndoConfirm.tsx  UpdaterDialog.tsx
gui/src/hooks/: useBatchProgress.ts  useInsights.ts  useTasks.ts  useUpdater.ts
gui/src/lib/: tauri.ts  tools.ts
launchagent/: com.rew.agent.plist
scripts/: build-release.sh  deploy-website.sh  test-all.sh  test-change-semantics.sh
src/: App.tsx  main.js  main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs  state.rs  tray.rs
src/components/: DiffViewer.tsx  MainLayout.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.tsx  TaskDetail.tsx  TaskTimeline.tsx  Toolbar.tsx  UndoConfirm.tsx
src/hooks/: useScanProgress.ts  useTasks.ts
src/lib/: format.ts  tauri.ts
src/styles/: global.css
tests/integration/: backup_restore.rs
website/: features.html  index.html  install.sh  shared.css  why.html
website/assets/: README.md
