[package]
name = "rew-tauri"
version = "0.1.0"
edition = "2021"
description = "rew — AI 时代的文件安全网 (Tauri 桌面应用)"

[lib]
name = "rew_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rew-core = { path = "../crates/rew-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
