[package]
name = "rew-cli"
version = "0.1.0"
edition = "2021"
description = "rew CLI — command-line interface for rew file safety net"

[[bin]]
name = "rew"
path = "src/main.rs"

[dependencies]
rew-core = { path = "../rew-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
chrono = "0.4"
uuid = "1"
dirs = "6"
libc = "0.2"
