[package]
name = "rew-core"
version = "0.1.0"
edition = "2021"
description = "rew core library — traits, types, config, database"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "6"
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["full"] }
globset = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
